--- a/TheCursedReturn/TCR_ALPHA/api/package.json
+++ b/TheCursedReturn/TCR_ALPHA/api/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "api",
+  "name": "app.js",
   "version": "1.0.0",
-  "description": "API file TCR",
-  "main": "app.js",
+  "main": "audio.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Infinite Horizon Studios",
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "mysql2": "^3.14.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.14.1",
+    "nodemon": "^3.1.9"
   }
 }
